@startuml
title 校园钓鱼防御平台 - 核心类图

' 用户类
class User {
    +id: int
    +username: string
    +email: string
    +password: string
    +role: enum
    +is_active: boolean
    +last_login: datetime
    +__str__()
}

' URL检测记录类
class URLDetection {
    +id: int
    +url: string
    +is_phishing: boolean
    +confidence: float
    +detection_time: datetime
    +user: User
    +__str__()
}

' 邮件分析记录类
class EmailAnalysis {
    +id: int
    +email_header: text
    +is_phishing: boolean
    +confidence: float
    +analysis_time: datetime
    +user: User
    +__str__()
}

' 钓鱼特征类
class PhishingFeature {
    +id: int
    +feature_type: enum
    +pattern: string
    +description: string
    +severity: int
    +__str__()
}

' 关系
User "1" --> "*" URLDetection : 发起
User "1" --> "*" EmailAnalysis : 发起
URLDetection "1" --> "*" PhishingFeature : 匹配
EmailAnalysis "1" --> "*" PhishingFeature : 匹配

@enduml
